tests/ui/allocator/no-thread-local.stderr
error: allocators cannot be `#[thread_local]`
  --> $DIR/no-thread-local.rs:7:1
   |
LL | #[thread_local]
   | ---------------
   | |
   | marked `#[thread_local]` here
   | help: remove this attribute
LL | static A: System = System;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

